// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DependenciesApp component on creation given a dependency list which is known to be incomplete matches the snapshot 1`] = `
<div>
  <dependencylistincompletealert-stub />
   
  <!---->
   
  <div
    class="d-sm-flex justify-content-between align-items-baseline my-2"
  >
    <h4
      class="h5"
    >
      
      Dependencies
      
      <glbadge-stub
        pill=""
      >
        100
      </glbadge-stub>
    </h4>
     
    <dependenciesactions-stub
      namespace="allDependencies"
    />
  </div>
   
  <paginateddependenciestable-stub
    namespace="allDependencies"
  />
</div>
`;

exports[`DependenciesApp component on creation given a fetch error matches the snapshot 1`] = `
<div>
  <!---->
   
  <!---->
   
  <div
    class="d-sm-flex justify-content-between align-items-baseline my-2"
  >
    <h4
      class="h5"
    >
      
      Dependencies
      
      <!---->
    </h4>
     
    <dependenciesactions-stub
      namespace="allDependencies"
    />
  </div>
   
  <paginateddependenciestable-stub
    namespace="allDependencies"
  />
</div>
`;

exports[`DependenciesApp component on creation given a list of dependencies and ok report matches the snapshot 1`] = `
<div>
  <!---->
   
  <!---->
   
  <div
    class="d-sm-flex justify-content-between align-items-baseline my-2"
  >
    <h4
      class="h5"
    >
      
      Dependencies
      
      <glbadge-stub
        pill=""
      >
        100
      </glbadge-stub>
    </h4>
     
    <dependenciesactions-stub
      namespace="allDependencies"
    />
  </div>
   
  <paginateddependenciestable-stub
    namespace="allDependencies"
  />
</div>
`;

exports[`DependenciesApp component on creation given the dependency list job failed matches the snapshot 1`] = `
<div>
  <!---->
   
  <dependencylistjobfailedalert-stub
    jobpath="/jobs/foo/321"
  />
   
  <div
    class="d-sm-flex justify-content-between align-items-baseline my-2"
  >
    <h4
      class="h5"
    >
      
      Dependencies
      
      <!---->
    </h4>
     
    <dependenciesactions-stub
      namespace="allDependencies"
    />
  </div>
   
  <paginateddependenciestable-stub
    namespace="allDependencies"
  />
</div>
`;

exports[`DependenciesApp component on creation given the dependency list job has not yet run matches the snapshot 1`] = `
<glemptystate-stub
  description="The dependency list details information about the components used within your project."
  primarybuttonlink="http://test.host"
  primarybuttontext="Learn more about the dependency list"
  svgpath="/bar.svg"
  title="View dependency details for your project"
/>
`;

exports[`DependenciesApp component on creation matches the snapshot 1`] = `
<glloadingicon-stub
  class="mt-4"
  color="orange"
  label="Loading"
  size="md"
/>
`;
